<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33000000">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_114"
        android:orientation="horizontal"
        android:background="@android:color/white">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/pic_shuxing"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:contentDescription="@null"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sky_drive_attribute1"
                android:textColor="@color/user_detail_title_color"
                android:textSize="@dimen/sp_14"/>
            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/sky_drive_attribute2"
                android:textColor="@color/user_detail_title_color"
                android:textSize="@dimen/sp_14"/>
            <TextView
                android:id="@+id/tv_folder_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/sky_drive_attribute3"
                android:textColor="@color/user_detail_title_color"
                android:textSize="@dimen/sp_14"/>
            <TextView
                android:id="@+id/tv_document_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:text="@string/sky_drive_attribute4"
                android:textColor="@color/user_detail_title_color"
                android:textSize="@dimen/sp_14"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>