<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#33000000">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#F4F4F4"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_document_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_gravity="center_horizontal"
            android:text="@string/sky_drive_need_to_upload"
            android:textColor="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_15">
            <TextView
                android:id="@+id/tv_upload_pic"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/icon_picture"
                android:drawablePadding="@dimen/dp_5"
                android:text="@string/sky_drive_upload_pic"/>
            <TextView
                android:id="@+id/tv_upload_video"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/icon_video"
                android:drawablePadding="@dimen/dp_5"
                android:text="@string/sky_drive_upload_video"/>
            <TextView
                android:id="@+id/tv_upload_file"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:drawableTop="@drawable/icon_choose_file"
                android:drawablePadding="@dimen/dp_5"
                android:text="@string/sky_drive_upload_file"/>
        </LinearLayout>
        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_44"
            android:text="@string/cancle"
            android:textColor="@color/grey"
            android:background="@android:color/white"/>
    </LinearLayout>
</RelativeLayout>