<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/comm_topbar_style_2" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp_5">
        <android.support.percent.PercentRelativeLayout
            android:id="@+id/rl_public_area"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:layout_marginTop="@dimen/dp_10">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_widthPercent="60%"
                app:layout_heightPercent="80%"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/pic1"
                android:scaleType="fitXY"
                android:contentDescription="@null"/>
            <android.support.percent.PercentRelativeLayout
                android:layout_width="@dimen/dp_200"
                android:layout_height="match_parent"
                app:layout_widthPercent="50%"
                android:background="@drawable/sky_drive_pic1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sky_drive_text1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    android:layout_above="@+id/iv_1"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    app:layout_marginBottomPercent="15%"
                    app:layout_marginEndPercent="15%"
                    app:layout_marginRightPercent="15%"/>
                <ImageView
                    android:id="@+id/iv_1"
                    app:layout_widthPercent="32%"
                    app:layout_heightPercent="25%"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    app:layout_marginEndPercent="15%"
                    app:layout_marginRightPercent="15%"
                    app:layout_marginBottomPercent="25%"
                    android:src="@drawable/icon_file_right"
                    android:contentDescription="@null"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_25"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    app:layout_marginLeftPercent="15%"
                    app:layout_marginStartPercent="15%"
                    app:layout_marginBottomPercent="25%"
                    android:src="@drawable/ico_arrow_left"
                    android:contentDescription="@null"/>
            </android.support.percent.PercentRelativeLayout>
        </android.support.percent.PercentRelativeLayout>
        <android.support.percent.PercentRelativeLayout
            android:id="@+id/rl_personal_area"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_widthPercent="60%"
                app:layout_heightPercent="80%"
                android:layout_centerVertical="true"
                android:src="@drawable/pic2"
                android:scaleType="fitXY"
                android:contentDescription="@null"/>
            <android.support.percent.PercentRelativeLayout
                android:layout_width="@dimen/dp_200"
                android:layout_height="match_parent"
                app:layout_widthPercent="50%"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/sky_drive_pic2">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sky_drive_text2"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    android:layout_above="@+id/iv_2"
                    app:layout_marginBottomPercent="15%"
                    app:layout_marginLeftPercent="15%"
                    app:layout_marginStartPercent="15%"/>
                <ImageView
                    android:id="@+id/iv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_widthPercent="32%"
                    app:layout_heightPercent="25%"
                    android:layout_alignParentBottom="true"
                    app:layout_marginStartPercent="15%"
                    app:layout_marginLeftPercent="15%"
                    app:layout_marginBottomPercent="25%"
                    android:src="@drawable/icon_file_left"
                    android:contentDescription="@null"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_25"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    app:layout_marginBottomPercent="25%"
                    app:layout_marginEndPercent="15%"
                    app:layout_marginRightPercent="15%"
                    android:src="@drawable/ico_arrow_right"
                    android:contentDescription="@null"/>
            </android.support.percent.PercentRelativeLayout>
        </android.support.percent.PercentRelativeLayout>
        <android.support.percent.PercentRelativeLayout
            android:id="@+id/rl_share_area"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:onClick="onClick"
            android:layout_marginBottom="@dimen/dp_10">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_widthPercent="60%"
                app:layout_heightPercent="80%"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/pic3"
                android:scaleType="fitXY"
                android:contentDescription="@null"/>
            <android.support.percent.PercentRelativeLayout
                android:layout_width="@dimen/dp_200"
                android:layout_height="match_parent"
                app:layout_widthPercent="50%"
                android:background="@drawable/sky_drive_pic3">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sky_drive_text3"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_16"
                    android:layout_above="@+id/iv_3"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    app:layout_marginBottomPercent="15%"
                    app:layout_marginEndPercent="15%"
                    app:layout_marginRightPercent="15%"/>
                <ImageView
                    android:id="@+id/iv_3"
                    app:layout_widthPercent="32%"
                    app:layout_heightPercent="25%"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    app:layout_marginEndPercent="15%"
                    app:layout_marginRightPercent="15%"
                    app:layout_marginBottomPercent="25%"
                    android:src="@drawable/icon_file_right"
                    android:contentDescription="@null"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_25"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    app:layout_marginLeftPercent="15%"
                    app:layout_marginStartPercent="15%"
                    app:layout_marginBottomPercent="25%"
                    android:src="@drawable/ico_arrow_left"
                    android:contentDescription="@null"/>
            </android.support.percent.PercentRelativeLayout>
        </android.support.percent.PercentRelativeLayout>
    </LinearLayout>
</LinearLayout>